fixes #11 missing dependency in front: fuse.js, email-validator

--- a/front-mjail/package.json
+++ b/front-mjail/package.json
@@ -26,7 +26,9 @@
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "email-validator": "^2.0.4",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^3.2.1",
     "jquery": "^3.3.1",
     "zone.js": "^0.8.26"
   },
