--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "fs-extra": "^6.0.1",
     "mailparser-mit": "^0.6.2",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.1",
     "nodemailer": "^4.6.5",
     "sanitize-filename": "^1.6.1",
