--- a/config/config.json.dist
+++ b/config/config.json.dist
@@ -5,6 +5,7 @@
         "cert": "../mJailCert/labcms.cert"
     },
     "cert": null,
+    "certTls": null,
     "smtpMaxSizeKo": 102400,
     "httpPort": 8080,
     "mongoDbUrl": "mongodb://labcms/mjail",
