--- a/front-mjail/package.json
+++ b/front-mjail/package.json
@@ -31,6 +31,7 @@
     "fuse.js": "3.2.1",
     "jquery": "^3.4.1",
     "ng-push": "^0.2.2",
+    "popper.js": "^1.16.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
